# Pap2Pat

./: .gitattributes  .gitignore  .pre-commit-config.yaml  3rd-party-licenses.txt  LICENSE  README.md
Outline_Guided_Generation/: pyproject.toml
Outline_Guided_Generation/src/: evaluate.py  finetune.py  generate.py  generate_heuristic_baselines.py  remove_repetitions.py
Outline_Guided_Generation/src/configs/: deepspeed_zero_3.yaml  sft.yaml
Outline_Guided_Generation/src/dataset/: chunk.py  dataset.py  paper_extractor.py  prompt.py
Outline_Guided_Generation/src/utils/: general.py  merge_lora_model.py  sgl.py
Pap2Pat/: README.md  pyproject.toml
Pap2Pat/data/W100168059-US20130210636/: paper.json  paper.md  patent.json  patent.md  patent_outline_empty.md  patent_outline_long.md  patent_outline_medium.md  patent_outline_short.md
Pap2Pat/data/W105152574-US20150203447/: paper.json  paper.md  patent.json  patent.md  patent_outline_empty.md  patent_outline_long.md  patent_outline_medium.md  patent_outline_short.md
Pap2Pat/data/W1489349053-US20170335369/: paper.json  paper.md  patent.json  patent.md  patent_outline_empty.md  patent_outline_long.md  patent_outline_medium.md  patent_outline_short.md
Pap2Pat/data/W1503841649-US20140103260/: paper.json  paper.md  patent.json  patent.md  patent_outline_empty.md  patent_outline_long.md  patent_outline_medium.md  patent_outline_short.md
Pap2Pat/data/W1516158759-US20120194631/: paper.json  paper.md  patent.json  patent.md  patent_outline_long.md  patent_outline_medium.md  patent_outline_short.md
Pap2Pat/data/W1535601016-US20070292847/: paper.json  paper.md  patent.json  patent.md  patent_outline_empty.md  patent_outline_long.md  patent_outline_medium.md  patent_outline_short.md
Pap2Pat/data/W1539924180-US20150285749/: paper.json  paper.md  patent.json  patent.md  patent_outline_empty.md  patent_outline_long.md  patent_outline_medium.md  patent_outline_short.md
Pap2Pat/data/W1547341860-US20160132637/: paper.json  paper.md  patent.json  patent.md  patent_outline_long.md  patent_outline_medium.md  patent_outline_short.md
Pap2Pat/data/W1556784368-US20070087366/: paper.json  paper.md  patent.json  patent.md  patent_outline_empty.md  patent_outline_long.md  patent_outline_medium.md  patent_outline_short.md
Pap2Pat/data/W1558987587-US20150289769/: paper.json  paper.md  patent.json  patent.md  patent_outline_empty.md  patent_outline_long.md  patent_outline_medium.md  patent_outline_short.md
Pap2Pat/data/W1559476872-US20050142584/: paper.json  paper.md  patent.json  patent.md  patent_outline_empty.md  patent_outline_long.md  patent_outline_medium.md  patent_outline_short.md
Pap2Pat/data/W1561441884-US20160003824/: paper.json  paper.md  patent.json  patent.md  patent_outline_empty.md  (+3 more)
Pap2Pat/pap2pat/: __init__.py  clustering.py  evaluation.py
Pap2Pat_Dataset_Creation/: README.md  pyproject.toml
Pap2Pat_Dataset_Creation/pap2pat/: step_00_download_uspto.py  step_01_parse_uspto.py  step_02_query.sparql  step_02_query_papers.py  step_03_match.py  step_04_add_and_filter_licenses.py  step_05_download_papers.py  step_06_parse_documents.py  step_07_generate_summaries.py  step_08_split_and_package.py  title_blacklist.txt
(+14154 files in other folders)
