[tool.poetry]
name = "pap2pat"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "pap2pat"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
lxml = "^4.9.3"
requests = "^2.31.0"
rich = "^13.7.0"
numpy = "^1.23.2"
tqdm = "^4.66.1"
pyrootutils = "^1.0.4"
sparqlwrapper = "^2.0.0"
pandas = "^1.5.3"
spacy = {extras = ["cuda122"], version = "^3.4.1"}
ipykernel = "^6.27.1"
matplotlib = "^3.9.0"
seaborn = "^0.13.0"
fire = "^0.5.0"
selenium = "^4.16.0"
arxiv = "^2.1.0"
bs4 = "^0.0.1"
pdfplumber = "^0.10.3"
sentence-transformers = "^2.2.2"
cdifflib = "^1.2.6"
sacrebleu = "^2.4.0"
hydralette = "^0.2.3"
sglang = {version = "0.1.16", extras = ["srt"]}
datasets = "^2.17.1"
scikit-learn = "^1.4.2"
pypandoc = "^1.13"
editdistance = "^0.8.1"
nltk = "^3.9.1"



[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"